--- a/css/finance.css
+++ b/css/finance.css
@@ -14,6 +14,11 @@ h1,h2,h3,h4,h5,h6,.uk-navbar-nav>li>a {
 .uk-height-slider, .uk-navbar-nav>li>a:after, .uk-badge-success, .styled-options li:hover {
   background: #ff9c0f;
 }
+.uk-height-slider {
+  background: url("../img/bg_slider.jpg") 0 0 no-repeat;
+  background-size: cover;
+  text-shadow: 1px 1px 1px #1c1c1c;
+}
 .uk-navbar-nav>li>a.uk-navbar-nav-subtitle span, .uk-container-center.uk-form .crypt:before, .uk-link, a {
   color: #ff9c0f;
 }
@@ -22,3 +27,10 @@ h1,h2,h3,h4,h5,h6,.uk-navbar-nav>li>a {
 }
 ::-moz-selection{background:#ff9c0f;color:#fff;text-shadow:none}
 ::selection{background:#ff9c0f;color:#fff;text-shadow:none}
+.black-nav, nav.uk-navbar, .uk-navbar-nav>li.uk-active>a, .uk-navbar-nav>li.uk-open>a, .uk-navbar-nav>li:hover>a, .uk-navbar-nav>li>a:focus {
+  background: #1b1c1d;
+  color: #fff;
+}
+.footer-bg {
+  background-color: #1c1c1c;
+}
